# Drive-tests

./: .dockerignore  .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  callgrind.out  config.json  contacts.txt  drive_tests_db  drive_tests_db.db  drive_tests_db.db-shm  drive_tests_db.db-wal  private-key.pem  test.mwb  test.mwb.bak
cert/: cert.crt  cert.pem  key.key  key.pem
ci/: test.sh
diagrams/: Activity.drawio  Classes.drawio  Component.drawio
frontend/: index.html
frontend/css/: style.css
frontend/registration/: log.css  reg.css  reg.html
frontend/test__site/: server.js  test.css  test.html
migrations/2020-12-11-075510_drive_tests_db/: down.sql  up.sql
rsa-keys/: public-key.pem
src/: lib.rs  main.rs  schema.rs  utils.rs  web.rs
src/db/: mod.rs  model.rs  schema.rs
tests/: server.rs
