[package]
name = "driving-tests-site"
version = "0.1.0"
authors = [
    "Sasha Yusuk <thepulticula@gmail.com>",
    "Igor Shashin <kshico123@gmail.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
actix-web = {version = "3.2.0", features = ["openssl"]}
diesel = {version = "1.4.5", features = ["sqlite", "r2d2"]}
log = "0.4.11"
simple_logger = "1.11.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
rsa = "0.3.0"
rand = "0.7.3"
hex = "0.4.2"
lazy_static = "1.4.0"
openssl = "0.10"

