[package]
name = "driving-tests-site"
version = "0.1.0"
authors = [
    "Sasha Yusuk <thepulticula@gmail.com>",
    "Igor Shashin <kshico123@gmail.com>"
]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.33"
actix-web = {version = "3.2.0", features = ["openssl"]}
actix-rt = "1.0.0"
diesel = {version = "*", default-features = false, features = ["sqlite", "r2d2"]}
log = "0.4.11"
simple_logger = "1.11.0"
env_logger = "0.8.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
r2d2 = "0.8.8"
rsa = "0.3.0"
rand = "0.7.3"
image = "0.23.12"
hex = "0.4.2"
lazy_static = "1.4.0"
openssl = "0.10"
uuid = {version = "0.8.1", features = ["v4"] }
base64 = "0.13.0"

