[package]
name = "driving-tests-site"
version = "0.1.0"
authors = [
    "Sasha Yusuk <thepulticula@gmail.com>",
    "Igor Shashin <kshico123@gmail.com>"
]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.33"
actix-web = { version = "3.2.0", features = [ "openssl" ] }
actix-cors = "0.5.4"
diesel = { version = "^1.4", default-features = false, features = [ "sqlite", "r2d2" ] }
env_logger = "0.8.2"
hex = "0.4.2"
image = "0.23.12"
log = "0.4.11"
openssl = "^0.10"
rand = "0.7.3"
rsa = "0.3.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[dependencies.libsqlite3-sys]
version = "0.9.1"
features = [ "bundled" ]

[dependencies.openssl-sys]
version = "^0.9"

[dev-dependencies]
actix-rt = "1.0.0"
uuid = { version = "0.8.1", features = [ "v4" ] }
lazy_static = "1.4.0"
